--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <script>
         var username = prompt("What username do you want?");
         var socket = io();
-        socket.emit(json.stringify({username:username}));
+        socket.emit(JSON.stringify({username:username}));
     </script>
 </body>
 </html>
