Basic HTML Changes
Added title(s).

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+    <title>CodeDay DodgeBall</title>
     <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
+  <center><font face = "Verdana" size = "5">Code Day Dodgeball Project!</font></center>
     <script>
         var username = prompt("What username do you want?");
         var socket = io();
