--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <script src="/socket.io/socket.io.js"></script>
+    <title>Code Day Dodgeball</title>
 </head>
 <body>
+    <center>Code Day - DodgeBall</center>
     <script>
         var username = prompt("What username do you want?");
         var socket = io();
