--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/public/player-client-side.js"></script>
+    <script src="/player-client-side.js"></script>
     <title>Code Day Dodgeball</title>
 </head>
 <body>
