Pushing index.html changes through Atom.

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
           canvas.height = window.innerHeight;
           draw();
         }
-        resizeCanvas();
+        resizeCanvas();//Test text please remove.
         function draw(){ //Put all the drawing stuff in here to avoid size conflicts.
 
         }
