--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,12 @@
       font-family: Verdana;
     }
      * { padding: 0; margin: 0; }
-     canvas { background: #d9d9d9; display: block; margin: 0 auto; }
+     canvas {background: #d9d9d9; display: block; margin: 0 auto;}
    </style>
 </head>
 <body>
     <center id="topTitle">Code Day - DodgeBall</center>
+    <canvas id="defaultCanvas"></canvas>
     <script>
         var canvas = document.getElementById("defaultCanvas");
         var ctx = canvas.getContext("2d");
