--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,20 @@
         }
         var username = prompt("What username do you want?"); //Maybe move the username stuff into a function later?
         var socket = io();
-        socket.emit("username change", JSON.stringify({username:username}));
-        socket.addEventListener("user joined", function (username) {console.log(username + " joined.")})
+        var players, player;
+        socket.emit("username input", JSON.stringify({username:username}));
+        socket.addEventListener("user joined", function (playerData) {
+            var newPlayer = JSON.parse(playerData);
+            while (players.length < newPlayer.id) {
+                players.push(null);
+            }
+            players[newPlayer.id] = new Player(newPlayer);
+        })
+        socket.addEventListener("init", function (data) {
+            data = JSON.parse(data);
+            players = data.players.map(p => (p ? new Player(p) : null));
+            player = new Player(data.player);
+        });
         socket.addEventListener("closing", function () { socket.close(); })
     </script>
 </body>
