--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/player-client-side.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.12/p5.js"></script>
     <title>Code Day Dodgeball</title>
     <style>
     #topTitle{
