--- a/public/index.html
+++ b/public/index.html
@@ -10,22 +10,27 @@
       font-family: Verdana;
     }
      * { padding: 0; margin: 0; }
-     canvas {background: #d9d9d9; display: block; margin: 0 auto;}
+     body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    }
+     canvas { background: #d9d9d9; display: block; margin: 0 auto; }
    </style>
 </head>
 <body>
     <center id="topTitle">Code Day - DodgeBall</center>
-    <canvas id="defaultCanvas"></canvas>
     <script>
-        var canvas = document.getElementById("defaultCanvas");
-        var ctx = canvas.getContext("2d");
-        window.addEventListener('resize', resizeCanvas, false); //Resizing the canvas to fit the screen
-        function resizeCanvas(){
-          canvas.width = window.innerWidth;
-          canvas.height = window.innerHeight;
-          draw();
+        function windowResized() {
+            resizeCanvas(windowWidth, windowHeight);
         }
-        resizeCanvas();
+
+        function setup() {
+            createCanvas(windowWidth, windowHeight);
+        }
+
         function draw(){ //Put all the drawing stuff in here to avoid size conflicts.
 
         }
