--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.12/p5.js"></script>
     <title>Code Day Dodgeball</title>
     <style>
-    #topTitle{
-      font-family: Verdana;
-    }
      * { padding: 0; margin: 0; }
      body {
         width: 100%;
         height: 100%;
         margin: 0;
         padding: 0;
-        overflow: hidden;
     }
      canvas { background: #d9d9d9; display: block; margin: 0 auto; }
    </style>
 </head>
 <body>
-    <center id="topTitle">Code Day - DodgeBall</center>
     <script>
         function windowResized() {
             resizeCanvas(windowWidth, windowHeight);
@@ -36,18 +31,14 @@
             if (state === "loading") {
                 text("Loading" + ".".repeat(Math.floor(Math.random()*3)), 314, 314);
             }else if (state === "game") {
-                if (movement.up) {
-                    player.y -= 2;
-                }
-                if (movement.down) {
-                    player.y += 2;
-                }
-                if (movement.up || movement.down) {
-                    socket.emit("move", player.y.toString());
-                }
+                var lastPos = player.y;
+                player.move();
                 for (var p of players) {
                     if (!p) continue;
-                    rect(p.x, p.y, 20, 20);
+                    p.display();
+                }
+                if (lastPos !== player.y) {
+                    socket.emit("move", player.y.toString());
                 }
             }
         }
