--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         function draw(){ //Put all the drawing stuff in here to avoid size conflicts.
             background(255);
             if (state === "loading") {
-                text("Loading" + ".".repeat(Math.floor(Math.random()*3)), 314, 314);
+                text("Loading" + ".".repeat(Math.floor(Math.random()*3)), windowWidth/2, windowHeight/2);
             }else if (state === "game") {
                 var lastPos = player.y;
                 player.move();
