Cleaning up a bit more code, adding some comments.

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <script>
-        var eegg = new Konami(function() {text('Konami Code', 314, 314)});
+        var eegg = new Konami(function() {alert("You found my hidden easter egg :D")});
         function windowResized() {
             resetMatrix();
             if (windowWidth/8 > windowHeight/5) {
